--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</div>
 		<div id="main-tagline">
 			<span class="tagline-text skranji">
-				THE BEST VIKING AXES
+				CUTTING EDGE VIKING AXES
 			</span>
 		</div>
 		<div id="main-subtagline">
@@ -35,5 +35,105 @@
 			</h2>
 		</div>
 	</div>
+
+	<div class="catalog-row">
+		<div class="axe-container-wrapper">
+			<div class="axe-container">
+				<div class="axe-title">
+					<h3 class="skranji">The Silent Night</h3>
+				</div>
+				<div class="axe-image">
+					<div class="axe-price skranji">$200</div>
+					<img src="silent-night.png">
+				</div>
+				<div class="axe-cart">
+					<div class="add-to-cart skranji">
+						<a href="#">Add to Cart</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="axe-container">
+				<div class="axe-title">
+					<h3 class="skranji">The Dainty Daisy</h3>
+				</div>
+				<div class="axe-image">
+					<div class="axe-price skranji">$100</div>
+					<img src="dainty-daisy.png">
+				</div>
+				<div class="axe-cart">
+					<div class="add-to-cart skranji">
+						<a href="#">Add to Cart</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="axe-container">
+				<div class="axe-title">
+					<h3 class="skranji">Double Trouble</h3>
+				</div>
+				<div class="axe-image">
+					<div class="axe-price skranji">$340</div>
+					<img src="double-trouble.png">
+				</div>
+				<div class="axe-cart">
+					<div class="add-to-cart skranji">
+						<a href="#">Add to Cart</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="catalog-row">
+		<div class="axe-container-wrapper">
+			<div class="axe-container">
+				<div class="axe-title">
+					<h3 class="skranji">Whispering Wind</h3>
+				</div>
+				<div class="axe-image">
+					<div class="axe-price skranji">$225</div>
+					<img src="whispering-wind.png">
+				</div>
+				<div class="axe-cart">
+					<div class="add-to-cart skranji">
+						<a href="#">Add to Cart</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="axe-container">
+				<div class="axe-title">
+					<h3 class="skranji">Cunning Cutter</h3>
+				</div>
+				<div class="axe-image">
+					<div class="axe-price skranji">$200</div>
+					<img src="cunning-cutter.png">
+				</div>
+				<div class="axe-cart">
+					<div class="add-to-cart skranji">
+						<a href="#">Add to Cart</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="axe-container">
+				<div class="axe-title">
+					<h3 class="skranji">Kingmaker</h3>
+				</div>
+				<div class="axe-image">
+					<div class="axe-price skranji">$400</div>
+					<img src="kingmaker.png">
+				</div>
+				<div class="axe-cart">
+					<div class="add-to-cart skranji">
+						<a href="#">Add to Cart</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	
 </body>
 </html>
