fixed header to top of screen, added links to header

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 	<div id="header">
 		<div id="logo">
-			<span class="skranji">Viking Store</span>
+			<span class="skranji"><a href="#">Viking Store</a></span>
 		</div>
 		<div id="cart">
-			<img src="icon_empty_cart.png">
-			<span class="skranji">Your Cart</span>
+			<a href="#"><img src="icon_empty_cart.png"></a>
+			<span class="skranji"><a href="#">Your Cart</a></span>
 		</div>
 	</div>
 
