added footer and catalog navigation

--- a/index.html
+++ b/index.html
@@ -134,6 +134,31 @@
 		</div>
 	</div>
 
+	<div id="page-nav">
+		<ul>
+			<li><a href="#"><< Previous</a></li>
+			<li><a href="#">1</a></li>
+			<li>2</li>
+			<li><a href="#">3</a></li>
+			<li><a href="#">...</a></li>
+			<li><a href="#">8</a></li>
+			<li><a href="#">9</a></li>
+			<li><a href="#">Next >></a></li>
+		</ul>
+	</div>
+
+	<div id="footer">
+		<h3>Contact</h3>
+		<div id="phone">
+			<img src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/icon_phone_white.png">
+			1-800-SLAYERS (752-9377)
+		</div>
+		<div id="email">
+			<img src="https://s3.amazonaws.com/viking_education/demos/viking_store_app/email_white.png">
+			contact@vikingstore.com
+		</div>
+	</div>
+
 	
 </body>
 </html>
